# mlops_lstm_stock_prediction

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PRE_PROD_README.md  PRE_PROD_TEST_SUMMARY.md  README.md  TERRAFORM_SETUP_COMPLETE.md  alembic.ini  auth.db  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  env.example.pre-prod  main.py  nvda_prediction_mixed_sectors.json  nvda_prediction_semiconductors.json  nvda_prediction_tech_giants.json  pyproject.toml
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: JWT_IMPLEMENTATION_SUMMARY.md  MULTIVARIATE_SUMMARY.md  QUICK_START.md  api_guide.md  authentication_guide.md  deployment_guide.md  mlflow_guide.md  multivariate_model_guide.md  production_deployment.md  terraform_guide.md
experiments/nvda_ticker_comparison/: PERSISTENCE_TEST.md  README.md  compare_results.py  comparison_report.md  run_experiments.sh
scripts/: deploy-production.sh  docker-build.sh  docker-entrypoint.sh  docker-run.sh  docker-stop.sh  gcp-startup.sh  init-multiple-databases.sh  init_db.py  init_mlflow.py  test-pre-prod.sh
src/: __init__.py  config.py
src/domain/: __init__.py  entities.py  models.py
src/presentation/: __init__.py  main.py
terraform/: CONFIGURATION_FIX.md  README.md  SETUP_COMPLETE.md  import-existing.sh  main.tf  outputs.tf  terraform.tfvars  variables.tf
tests/: __init__.py  conftest.py
tests/integration/: test_api_endpoints.py  test_auth_endpoints.py  test_mlflow_integration.py  (+1 more)
(+56 files in other folders)
