[project]
name = "mlops-lstm-stock-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "mlflow>=3.7.0",
    "pandera>=0.27.0",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.5",
    "structlog>=25.5.0",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]
